// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render facets for developer 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "ModuleFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "LanguageFacet",
]
`;

exports[`should render facets for directory 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "RuleFacet",
  "TagFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
  "LanguageFacet",
]
`;

exports[`should render facets for global page 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "AssigneeFacet",
  "AuthorFacet",
  "LanguageFacet",
]
`;

exports[`should render facets for module 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "RuleFacet",
  "TagFacet",
  "ModuleFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
  "LanguageFacet",
]
`;

exports[`should render facets for project 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "RuleFacet",
  "TagFacet",
  "ModuleFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
  "LanguageFacet",
]
`;

exports[`should render facets when my issues are selected 1`] = `
Array [
  "FacetMode",
  "TypeFacet",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "CreationDateFacet",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "AuthorFacet",
  "LanguageFacet",
]
`;
